<?xml version="1.0"?>
<package format="3">
  <name>serial2esp</name>
  <version>0.0.1</version>
  <description>Serial to ESP communication ROS2(foxy)(humble)package</description>

  <maintainer email="m11312012@mail.ntust.edu.tw">6C3</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>serial</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

